# serialization

./: Cargo.toml
serializeable_derive/: Cargo.toml
serializeable_derive/src/: lib.rs
src/: array_serialize.rs  box_serialize.rs  lib.rs  main.rs  nalgebra_arrays.rs  primitive_serialize.rs  string_serialize.rs  vec_serialize.rs
