[package]
name = "serializeable"
version = "0.1.0"
edition = "2024"


[dependencies]
serializeable_derive = {path = "serializeable_derive"}
tokio = { version = "1.48.0", features = ["io-util", "rt", "rt-multi-thread", "macros", "net", "time"], optional = true}


[features]
default = ["async"]
async = ["dep:tokio", "serializeable_derive/async"]