[package]
name = "serializeable"
version = "0.1.0"
edition = "2024"


[dependencies]
serializeable_derive = {path = "serializeable_derive"}
tokio = { version = "1.48.0", features = ["io-util", "rt", "rt-multi-thread", "macros", "net", "time"], optional = true}
nalgebra = { version = "0.34.1", optional = true, features = ["rand"] }

[features]
default = ["nalgebra", "async"]
async = ["dep:tokio", "serializeable_derive/async"]
nalgebra = ["dep:nalgebra"]